--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
-         <h1 class="blog-post-title">Success Story: Jack & Nathan</h1>
+         <h1 class="blog-post-title">Success Story: Jack and Nathan</h1>
          <p class="blog-post-meta">September 14, 2017 by Keith</p>
         <p>Jack and Nathan first met when Jack was visiting Chicago for work. The two hit it off and stayed in contact even after Jack returned to his home in the UK. When Jack was unexpectedly laid off from work, he and Nathan decided to live together in the US. Nathan and Jack successfully applied for a green card for Jack. After renewing the green card, Jack then came to Southam Law to apply for citizenship. Southam Law helped Jack put together a solid application, including clear proof that he and Nathan had been living together in the US (which allowed him to become a citizen just 3 years after he received his green card). Southam Law also helped Jack prepare for the citizenship exam and went with him to the interview. It was a great success, and Jack is now a citizen of the United States!</p>
 	<p>(names changed for privacy purposes)</p>
