--- a/news.html
+++ b/news.html
@@ -58,7 +58,7 @@
          <h1 class="blog-post-title">Latest Success Story: Laila's father, Javed</h1>
          <p class="blog-post-meta">October 16, 2017 by Keith</p>
         <p>Javed came to the United States over ten years ago. After his daughter, Laila, became a US citizen, they decided to apply for his green card. Javed and Laila came to Southam Law for help through the process. We prepared and filed all of the forms for this application. Immigration officials were quick to approve Javed's work and travel permits, but a decision on the green card lingered. After several inquiries to the appropriate immigration office, they finally approved the application. Officials did not even require Javed to appear for an interview. Now Javed can rest with the security that comes with lawful permanent resident status!</p>
-	<p>(Names changed for privacy purposes.</p>
+	<p>(Names changed for privacy purposes.)</p>
       </div><!-- /.blog-post -->
      </div>
      <div class="col-md-1"></div>
