--- a/news.html
+++ b/news.html
@@ -55,6 +55,22 @@
       <div class="col-md-1"></div>
       <div class="col-md-10">
         <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Naziha and James</h1>
+         <p class="blog-post-meta">April 4, 2018 by Keith</p>
+        <p>Naziha came to the US several years ago as a student. Naziha was married at that time but things were rocky, and ultimately she decided to divorce her husband. Her husband and his family had previously been gruff with Naziha, and their attitude only worsened after the divorce. Naziha continued to live and study in the US. She eventually also had a falling-out with her own family, and that's when Naziha began to worry for her safety in her home country. </p>
+	<p>She contacted Keith Southam at his prior office to help her apply for asylum based on the fear of what would happen to her as a divorced woman without strong family support in a conservative country. As she waited through the asylum process, a friend introduced her to James. The two started dating and began to fall in love. Naziha and James married, and they turned to Keith (now at Southam Law) to help them apply for a marriage-based green card. Keith helped them complete the necessary applications, gather strong evidence, and helped prepare them for the marriage interview at immigration.</p>
+	<p>In the meantime, an asylum interview was scheduled, creating a potential conflict, but with Keith's help, Naziha was able to postpone the asylum interview. The work and delicate timing finally paid off, and Naziha is now a permanent resident. Naziha no longer need worry about her safety in her home country because she and James can live together securely and permanently in the United States!</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
+	 <div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
          <h1 class="blog-post-title">Success Story: Weronika's Student Visa</h1>
          <p class="blog-post-meta">January 25, 2018 by Keith</p>
         <p>Weronika came to the United States with her parents when she was a young child. Her father was a student, and Weronika went to elementary and then high school in the US. When Weronika graduated from high school, she was thrilled to be admitted to a prestigious university with a scholarship. However, as a dependent on her father's student visa, she could not accept the scholarship as planned. That's when Weronika came to Southam Law. Southam Law helped Weronika change her status from a dependent to her own student visa (which would allow her to accept the scholarship). Though immigration took longer than Weronika wanted, the request was ultimately approved. Weronika can now accept the scholarship and begin her studies in earnest!</p>
