--- a/news.html
+++ b/news.html
@@ -93,6 +93,7 @@
 	         </div>
      <div class="col-md-1"></div>
     </div>
+	</div>
 	<div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
