--- a/news.html
+++ b/news.html
@@ -50,6 +50,23 @@
       </div>
     </div>
   </nav>
+	<div class="container main-content">
+    <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="blog-post">
+         <h1 class="blog-post-title">Success Story: Pastor Daniel</h1>
+         <p class="blog-post-meta">December 14, 2018 by Keith</p>
+        <p>Pastor Daniel was ordained many years ago. He was then offered a scholarship to study Theology at Wheaton College and moved to the US with his wife. Pastor Daniel studied in the United States, earned a degree, began to work as a pastor, had children in the US, and eventually founded his own church. In short, he built a life in the United States.</p>
+	<p>During part of this time, Pastor Daniel worked under a religious worker visa, but through an innocent mistake, lost this status. At this time, widespread violence was occurring in Pastor Daniel’s home country. For that reason, citizens of his country were granted Temporary Protected Status (TPS). This allowed Pastor Daniel and his wife to continue to live and work in the US under TPS status. This status was renewed time and again for nearly fifteen years. But in 2017, the US government decided to terminate TPS status, telling everyone with that status to leave the United States. Pastor Daniel was understandably worried and came to Keith at Southam Law.</p>
+	<p>Pastor Daniel’s situation was serious. The loss of TPS status meant that Pastor Daniel was technically without lawful status, a big problem for almost every immigration application. Still, Pastor Daniel and Keith worked to build a strong application for a religious worker visa. After all, Pastor Daniel had founded a church in the US that he still led. That church was doing good work in the US through its ministry and outreach and in Pastor Daniel’s home country by sending medicine and donations and by digging wells to provide clean drinking water to the community. After submitting two detailed sets of documents about Pastor Daniel’s background and the church, after a visit to the church by immigration officials, and after a heartfelt request to let Pastor Daniel obtain religious worker status in his situation, the application was finally approved!</p>
+	<p>Pastor Daniel can stay in the US, continuing to support his family, continuing to provide ministry to US congregants, and continuing to make tangible improvements to his home country.</p>
+	<p>(Names changed for privacy purposes.)</p>
+	</div><!-- /.blog-post -->
+     </div>
+     <div class="col-md-1"></div>
+    </div>
+  </div>
 	 <div class="container main-content">
     <div class="row">
       <div class="col-md-1"></div>
